--- a/bai32.html
+++ b/bai32.html
@@ -89,6 +89,7 @@
                 </div>
                 </div>
             </div>
+            <div class="footer"></div>
         </div>
 
     </div>
